# example-code

./: .gitignore  CMakeLists.txt  README.md  start.sh  valgrind.sh
.github/workflows/: cmake.yml
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test.cpp  test.hpp
